--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".mvvm.ThirdActivity">
+    tools:context=".activity.ThirdActivity">
 
     <TextView
         android:id="@+id/infoText"
