--- a/app/src/main/res/layout/activity_work_manager.xml
+++ b/app/src/main/res/layout/activity_work_manager.xml
@@ -4,8 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.SecondActivity">
+    tools:context=".activity.WorkManagerActivity">
 
-
+    <Button
+        android:id="@+id/doWorkBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开启 " />
 
 </LinearLayout>
